force-app/main/default/objects/DripEmail__c/DripEmail__c.object-meta.xml
<CustomObject>
    <label>Drip Email</label>
    <nameField>
        <label>Drip Email Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Drip Emails</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>