force-app/main/default/objects/DripEmail__c/fields/DripCampaign__c.field-meta.xml
<CustomField>
    <fullName>DripCampaign__c</fullName>
    <label>Drip Campaign</label>
    <referenceTo>DripCampaign__c</referenceTo>
    <relationshipLabel>Drip Emails</relationshipLabel>
    <relationshipName>DripEmails</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>