force-app/main/default/objects/DripEmail__c/fields/EmailDelivery__c.field-meta.xml
<CustomField>
    <fullName>EmailDelivery__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Email Delivery</label>
    <referenceTo>EmailDelivery__c</referenceTo>
    <relationshipLabel>Drip Emails</relationshipLabel>
    <relationshipName>DripEmails</relationshipName>
    <type>Lookup</type>
</CustomField>