force-app/main/default/objects/DripEmail__c/fields/Snippet__c.field-meta.xml
<CustomField>
    <fullName>Snippet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quicktext</label>
    <referenceTo>Snippet__c</referenceTo>
    <relationshipLabel>Drip Emails</relationshipLabel>
    <relationshipName>DripEmails</relationshipName>
    <type>Lookup</type>
</CustomField>