force-app/main/default/objects/DripEmail__c/fields/TimeOnSendDay__c.field-meta.xml
<CustomField>
    <fullName>TimeOnSendDay__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The time (in minutes) at which the email should be sent.</description>
    <inlineHelpText>Minutes after midnight. 0 corresponds to midnight, 90 to 1:30 and 810 to 13:30.</inlineHelpText>
    <label>Time to send</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>